--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 header:
   - title: Blog
     url: /blog/
-  - title: Portfolio
-    url: /portfolio/
+  - title: Projects
+    url: /projects/
   - title: Archive
     url: /archive.html
   - title: About
